--- a/dashboard.html
+++ b/dashboard.html
@@ -1,377 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rw">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les NGANYIRA – Dashboard & Create Account</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Les Nganyira - Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background-color: #f8f9fa; }
-    .lang-switch { position: fixed; top: 12px; right: 12px; z-index: 1040; }
-    .card { border-radius: 1rem; }
-    /* Medium welcome banner sizing */
-    .banner-card { max-width: 720px; margin: 0 auto; }
-    .banner-img { width: 100%; height: 280px; object-fit: cover; object-position: center; border-top-left-radius: inherit; border-top-right-radius: inherit; }
+    .card { border-radius:18px; }
   </style>
 </head>
-<body>
-  <!-- Language Switcher -->
-  <div class="lang-switch">
-    <div class="btn-group">
-      <button class="btn btn-sm btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="currentLangBtn">EN</button>
-      <ul class="dropdown-menu dropdown-menu-end">
-        <li><button class="dropdown-item" data-lang="en">English</button></li>
-        <li><button class="dropdown-item" data-lang="fr">Français</button></li>
-        <li><button class="dropdown-item" data-lang="rw">Kinyarwanda</button></li>
-      </ul>
-    </div>
+<body class="container py-4">
+  <nav class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="h4 m-0">Les Nganyira — Dashboard</h1>
+    <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Sohoka</button>
+  </nav>
+
+  <div id="content" class="card shadow-sm p-4">
+    <div id="hello" class="mb-1 fw-semibold">Murakaza neza!</div>
+    <div id="info" class="text-muted">Tegereza gato…</div>
   </div>
 
-  <div class="container py-5">
-    <!-- Header -->
-    <div class="d-flex align-items-center justify-content-between mb-4">
-      <h1 class="h3 m-0" data-i18n="title_dashboard">Family Dashboard</h1>
-      <div class="d-flex gap-2">
-        <button class="btn btn-outline-primary d-none" id="enterSiteBtn"><span data-i18n="btn_enter_site">Enter Site</span></button>
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createAccountModal" id="openCreateAccountBtn">
-          <span data-i18n="btn_create_account">Create Account</span>
-        </button>
-      </div>
-    </div>
-
-    <!-- Welcome Image Banner -->
-    <div class="card shadow-sm mb-4 banner-card">
-      <a href="https://www.google.com/imgres?q=welcome%20to%20our%20family%20pictures&imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2Fc3%2F40%2F09%2Fc34009ee2f5c69979feb276449a3c57f.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F737675613948318521%2F&docid=VuXRMGwV_E0WjM&tbnid=wmYYsJkI476hYM&vet=12ahUKEwj7nba1qoaPAxULmYkEHQ9JPb0QM3oECDYQAA..i&w=601&h=601&hcb=2&ved=2ahUKEwj7nba1qoaPAxULmYkEHQ9JPb0QM3oECDYQAA" target="_blank" rel="noopener" class="text-decoration-none">
-        <img src="https://i.pinimg.com/736x/c3/40/09/c34009ee2f5c69979feb276449a3c57f.jpg" class="card-img-top banner-img" alt="Welcome banner" />
-      </a>
-      <div class="card-body text-center">
-        <span class="fw-semibold" data-i18n="welcome_banner">Welcome to our family!</span>
-      </div>
-    </div>
-
-    <!-- Quick Stats -->
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h2 class="h6 text-muted" data-i18n="stat_total_contributions">Total Contributions</h2>
-            <p class="display-6 m-0" id="totalContributions">0</p>
-            <small class="text-muted" data-i18n="note_paid_only">Shows paid & approved only</small>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h2 class="h6 text-muted" data-i18n="stat_total_members">Total Members</h2>
-            <p class="display-6 m-0" id="totalMembers">0</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h2 class="h6 text-muted" data-i18n="stat_last_payment">Last Payment</h2>
-            <p class="h4 m-0" id="lastPayment">—</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Contribution History Table (placeholder) -->
-    <div class="card shadow-sm mt-4">
-      <div class="card-header bg-white">
-        <strong data-i18n="table_contrib_history">Contribution History</strong>
-      </div>
-      <div class="card-body">
-        <div class="alert alert-info m-0" role="alert">
-          <span data-i18n="msg_history_paid_only">Only appears after a verified payment.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Create Account Modal -->
-  <div class="modal fade" id="createAccountModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" data-i18n="modal_create_title">Create Account</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form id="createAccountForm" novalidate>
-            <div class="mb-3">
-              <label for="firstName" class="form-label" data-i18n="label_first_name">First Name</label>
-              <input type="text" id="firstName" name="firstName" class="form-control" required />
-              <div class="invalid-feedback" data-i18n="error_first_name">First name is required.</div>
-            </div>
-            <div class="mb-3">
-              <label for="lastName" class="form-label" data-i18n="label_last_name">Last Name</label>
-              <input type="text" id="lastName" name="lastName" class="form-control" required />
-              <div class="invalid-feedback" data-i18n="error_last_name">Last name is required.</div>
-            </div>
-            $1<div class="mb-3">
-              <label for="email" class="form-label" data-i18n="label_email">Email</label>
-              <input type="email" id="email" name="email" class="form-control" required />
-              <div class="invalid-feedback" data-i18n="error_email">A valid email is required.</div>
-            </div>
-            <div class="mb-3">
-              <label for="phone" class="form-label" data-i18n="label_phone">Phone</label>
-              <input type="tel" id="phone" name="phone" class="form-control" />
-            </div>
-            <div class="d-grid">
-              <button type="submit" class="btn btn-primary">
-                <span data-i18n="btn_submit">Submit</span>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Email Sent Modal -->
-  <div class="modal fade" id="sentModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" data-i18n="modal_sent_title">Check your email</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="mb-0" data-i18n="modal_sent_body">We sent you a verification link. Please open your inbox and click the link to verify.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script> class="form-label" data-i18n="label_email">Email</label>
-              <input type="email" id="email" name="email" class="form-control" />
-            </div>
-            <div class="mb-3">
-              <label for="phone" class="form-label" data-i18n="label_phone">Phone</label>
-              <input type="tel" id="phone" name="phone" class="form-control" />
-            </div>
-            <div class="d-grid">
-              <button type="submit" class="btn btn-primary">
-                <span data-i18n="btn_submit">Submit</span>
-              </button>
-            </div>
-          </form>
-        </div>
-</div>
-</div>
-</div>
-
-  <!-- Verification Modal (simulated email) -->
-  <div class="modal fade" id="verifyModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" data-i18n="modal_verify_title">Verify your email</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="mb-2" data-i18n="verify_email_intro">Welcome to family Les Nganyira. This email is for verifying if it's really you.</p>
-          <a href="#" id="verifyLink" class="btn btn-primary w-100 mb-3" data-i18n="link_click_to_verify">Click here to verify</a>
-          <div class="text-muted small" data-i18n="verify_note_simulated">(Simulated email for now — we will plug in a real email service next.)</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // --- Simple i18n dictionary ---
-    const I18N = {
-      en: {
-        title_dashboard: "Family Dashboard",
-        btn_create_account: "Create Account",
-        stat_total_contributions: "Total Contributions",
-        stat_total_members: "Total Members",
-        stat_last_payment: "Last Payment",
-        table_contrib_history: "Contribution History",
-        msg_history_paid_only: "Only appears after a verified payment.",
-        note_paid_only: "Shows paid & approved only",
-        modal_create_title: "Create Account",
-        label_first_name: "First Name",
-        label_last_name: "Last Name",
-        label_id_number: "ID Number (Access Code)",
-        help_id_number: "Used for login if enabled by admins.",
-        label_email: "Email",
-        label_phone: "Phone",
-        btn_submit: "Submit",
-        error_first_name: "First name is required.",
-        error_last_name: "Last name is required.",
-        error_email: "A valid email is required.",
-        modal_sent_title: "Check your email",
-        modal_sent_body: "We sent you a verification link. Please open your inbox and click the link to verify.",
-        btn_enter_site: "Enter Site",
-        modal_verify_title: "Verify your email",
-        verify_email_intro: "Welcome to family Les Nganyira. This email is for verifying if it's really you.",
-        link_click_to_verify: "Click here to verify",
-        verify_note_simulated: "(Simulated email for now — we will plug in a real email service next.)",
-        $1,
-      fr: {
-        title_dashboard: "Tableau de bord familial",
-        btn_create_account: "Créer un compte",
-        stat_total_contributions: "Contributions totales",
-        stat_total_members: "Membres au total",
-        stat_last_payment: "Dernier paiement",
-        table_contrib_history: "Historique des contributions",
-        msg_history_paid_only: "N'apparaît qu'après un paiement vérifié.",
-        note_paid_only: "Affiche seulement les paiements validés",
-        modal_create_title: "Créer un compte",
-        label_first_name: "Prénom",
-        label_last_name: "Nom",
-        label_id_number: "Numéro d'identité (Code d'accès)",
-        help_id_number: "Utilisé pour la connexion si activé par les admins.",
-        label_email: "E-mail",
-        label_phone: "Téléphone",
-        btn_submit: "Envoyer",
-        error_first_name: "Le prénom est obligatoire.",
-        error_last_name: "Le nom est obligatoire.",
-        error_email: "Un e-mail valide est requis.",
-        modal_sent_title: "Vérifiez votre e-mail",
-        modal_sent_body: "Nous vous avons envoyé un lien de vérification. Ouvrez votre boîte de réception et cliquez sur le lien pour vérifier.",
-        btn_enter_site: "Entrer sur le site",
-        modal_verify_title: "Vérifiez votre e-mail",
-        verify_email_intro: "Bienvenue dans la famille Les Nganyira. Cet e-mail sert à vérifier que c'est bien vous.",
-        link_click_to_verify: "Cliquez ici pour vérifier",
-        verify_note_simulated: "(E-mail simulé pour l'instant — nous brancherons un vrai service ensuite.)",
-        welcome_banner: "Bienvenue dans notre famille !",
-      },
-      rw: {
-        title_dashboard: "Dashibodi y'Umuryango",
-        btn_create_account: "Fungura Konti",
-        stat_total_contributions: "Umusanzu Wose",
-        stat_total_members: "Umubare w'Abanyamuryango",
-        stat_last_payment: "Ubwishyu bwa Nyuma",
-        table_contrib_history: "Amateka y'Imisanzu",
-        msg_history_paid_only: "Bigaragara ari uko ubwishyu bwemejwe.",
-        note_paid_only: "Hagaragaza ubwishyu bwemejwe gusa",
-        modal_create_title: "Kurema Konti",
-        label_first_name: "Izina ry'Itangira",
-        label_last_name: "Izina ry'Ubuse",
-        label_id_number: "Nimero y'Indangamuntu (Kode yo Kwinjira)",
-        help_id_number: "Ikoreshwa mu kwinjira niba byemejwe n'abayobozi.",
-        label_email: "Imeli",
-        label_phone: "Telefone",
-        btn_submit: "Ohereza",
-        error_first_name: "Izina ry'itangira rirakenewe.",
-        error_last_name: "Izina ry'ubuse rirakenewe.",
-        error_email: "Imeli yemewe irakenewe.",
-        modal_sent_title: "Reba imeli yawe",
-        modal_sent_body: "Twoherereje ihuriro ryo kwemeza. Funga imeli yawe ukande kuri link yo kwemeza.",
-        btn_enter_site: "Injira ku rubuga",
-        modal_verify_title: "Emeza imeli yawe",
-        verify_email_intro: "Murakaza neza mu muryango Les Nganyira. Ubu butumwa ni ugusuzuma niba ari wowe koko.",
-        link_click_to_verify: "Kanda hano wemeze",
-        verify_note_simulated: "(Ubu ni ubutumwa bumeze nk'ubwo — tuzahuza serivisi y'ubutumwa bwa email nyuma.)",
-        welcome_banner: "Murakaza neza mu muryango wacu!",
-      },
-    };
-
-    const DEFAULT_LANG = localStorage.getItem('lng') || 'en';
-
-    function applyI18n(lang) {
-      const dict = I18N[lang] || I18N.en;
-      document.querySelectorAll('[data-i18n]').forEach(el => {
-        const key = el.getAttribute('data-i18n');
-        if (dict[key]) {
-          if (el.placeholder !== undefined && el.tagName === 'INPUT') {
-            el.placeholder = dict[key];
-          } else {
-            el.textContent = dict[key];
-          }
-        }
-      });
-      document.getElementById('currentLangBtn').textContent = lang.toUpperCase();
-      document.documentElement.lang = lang;
-      localStorage.setItem('lng', lang);
-
-      // Update validation messages for required fields
-      const form = document.getElementById('createAccountForm');
-      if (form) {
-        form.querySelector('#firstName')?.setCustomValidity('');
-        form.querySelector('#lastName')?.setCustomValidity('');
-      }
-    }
-
-    function setLang(lang) { applyI18n(lang); }
-
-    // Handle dropdown language selection
-    document.addEventListener('click', (e) => {
-      const btn = e.target.closest('[data-lang]');
-      if (btn) {
-        setLang(btn.getAttribute('data-lang'));
-      }
-    });
-
-    // Bootstrap validation + i18n-aware messages
-    (function() {
-      const form = document.getElementById('createAccountForm');
-      form.addEventListener('submit', function(event) {
-        const lang = localStorage.getItem('lng') || 'en';
-        const dict = I18N[lang] || I18N.en;
-
-        // Clear custom validity first
-        form.firstName.setCustomValidity('');
-        form.lastName.setCustomValidity('');
-
-        if (!form.firstName.value.trim()) {
-          form.firstName.setCustomValidity(dict.error_first_name);
-        }
-        if (!form.lastName.value.trim()) {
-          form.lastName.setCustomValidity(dict.error_last_name);
-        }
-
-        if (!form.checkValidity()) {
-          event.preventDefault();
-          event.stopPropagation();
-        } else {
-          event.preventDefault();
-          // Simulate sending email with a verification link via a modal
-          const verifyModalEl = document.getElementById('verifyModal');
-          const verifyModal = new bootstrap.Modal(verifyModalEl);
-          // Stash user info
-          localStorage.setItem('pendingUser', JSON.stringify({ firstName: form.firstName.value.trim(), lastName: form.lastName.value.trim(), email: form.email.value.trim(), phone: form.phone.value.trim() }));
-          verifyModal.show();
-          form.reset();
-          const modalEl = document.getElementById('createAccountModal');
-          const modal = bootstrap.Modal.getInstance(modalEl);
-          modal.hide();
-        }
-
-        form.classList.add('was-validated');
-      }, false);
-    })();
-
-    // Init + verification logic
-    function onVerifyClick(e){
-      e.preventDefault();
-      const pending = JSON.parse(localStorage.getItem('pendingUser') || '{}');
-      if (pending && pending.email) {
-        localStorage.setItem('verified', 'true');
-        localStorage.setItem('memberName', `${pending.firstName} ${pending.lastName}`.trim());
-      }
-      const verifyModalEl = document.getElementById('verifyModal');
-      const verifyModal = bootstrap.Modal.getInstance(verifyModalEl);
-      verifyModal.hide();
-      document.getElementById('enterSiteBtn')?.classList.remove('d-none');
-      alert((localStorage.getItem('lng')==='fr' ? 'Vérifié ! Bienvenue.' : localStorage.getItem('lng')==='rw' ? 'Byemejwe! Murakaza neza.' : 'Verified! Welcome.'));
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      applyI18n(DEFAULT_LANG);
-      document.getElementById('verifyLink')?.addEventListener('click', onVerifyClick);
-      if (localStorage.getItem('verified') === 'true') {
-        document.getElementById('enterSiteBtn')?.classList.remove('d-none');
-      }
-    });
-    });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFire
